# ITKMinimalPathExtraction

./: .gitignore  .travis.yml  CMakeLists.txt  README.rst  appveyor.yml  circle.yml  itk-module.cmake  pyproject.toml  setup.py
.circleci/: config.yml
data/: Real-DSA-01-Segmentation.bb  Real-DSA-01-Speed-02.mhd  Real-DSA-01-Speed-02.zraw  Synthetic-01-Speed.mhd  Synthetic-01.bb  Synthetic-02-Speed.mhd  Synthetic-02-Speed.zraw  Synthetic-02.bb  Synthetic-03-Speed.zraw  Synthetic-03.bb  Synthetic-04.zraw
examples/: CMakeLists.txt  DigitalSubtractionAngiographyVesselPath.ipynb  example.cxx  main.cxx
include/: itkArrivalFunctionToPathFilter.h  itkArrivalFunctionToPathFilter.hxx  itkImageToPathFilter.h  itkImageToPathFilter.hxx  itkIterateNeighborhoodOptimizer.h  itkLinearInterpolateSelectedNeighborsImageFunction.h  itkLinearInterpolateSelectedNeighborsImageFunction.hxx  itkPhysicalCentralDifferenceImageFunction.h  itkPhysicalCentralDifferenceImageFunction.hxx  itkSingleImageCostFunction.h  itkSingleImageCostFunction.hxx  itkSpeedFunctionPathInformation.h  itkSpeedFunctionPathInformation.hxx  itkSpeedFunctionToPathFilter.h  itkSpeedFunctionToPathFilter.hxx
src/: CMakeLists.txt  itkIterateNeighborhoodOptimizer.cxx
test/: CMakeLists.txt  MinimalPathTest.h  Test_SpeedToPath_GradientDescent_2D.cxx  Test_SpeedToPath_GradientDescent_3D.cxx  Test_SpeedToPath_IterateNeighborhood_2D.cxx  Test_SpeedToPath_IterateNeighborhood_3D.cxx  Test_SpeedToPath_IterateNeighborhood_ExtendedSeed_2D.cxx  Test_SpeedToPath_RegularStepGradientDescent_2D.cxx  Test_SpeedToPath_RegularStepGradientDescent_3D.cxx  azure-pipelines.yml
wrapping/: CMakeLists.txt  itkArrivalFunctionToPathFilter.wrap  itkIterateNeighborhoodOptimizer.wrap  itkPhysicalCentralDifferenceImageFunction.wrap  itkSingleImageCostFunction.wrap  itkSpeedFunctionPathInformation.wrap  itkSpeedFunctionToPathFilter.wrap
(+43 files in other folders)
